--- a/landing/templates/components/slider.html
+++ b/landing/templates/components/slider.html
@@ -3,7 +3,7 @@
     <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'gridwidth': 1170, 'gridheight': 800, 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': false }, 'bullets': {'enable': true, 'style': 'bullets-style-1', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
         <ul>
             <li data-transition="fade" class="slide-overlay slide-overlay-level-7">
-                <img src="{% static "img/slides/slide1.jpg" %}"
+                <img src="{% static "img/slides/slide.jpg" %}"
                     alt=""
                     data-bgposition="center center" 
                     data-bgfit="cover" 
