--- a/landing/templates/components/testimonials.html
+++ b/landing/templates/components/testimonials.html
@@ -1,10 +1,10 @@
 
 
-<section class="section section-tertiary mb-0 border-0 appear-animation" data-appear-animation="fadeIn">
+<section class="section section-tertiary my-0 border-0 appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row">
             <div class="col appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
-                
+                <h2 class="font-weight-light text-color-primary text-center text-7 mb-2" style="font-family: 'Playfair Display', serif;">Client Testimonials</h2>
                 <div class="owl-carousel owl-theme nav-bottom rounded-nav mb-0" data-plugin-options="{'items': 1, 'loop': false, 'nav': true, 'autoHeight': true}" id="testimonial-block">
                     <div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
