--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -11,8 +11,7 @@
         <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
-<div class="container-fluid" style='background:url("{% static 'img/about/banner.png' %}"); background-size:cover; min-height:100vh; 
-background-position-x: left;'>
+<div class="container-fluid" id="coaching-body">
     <br><br>
     <p class="col-9 text-center m-auto appear-animation animated fadeInUpShorter appear-animation-visible">
         We live and work in a <span class="text-primary">Volatile, Unpredictable, Complex and Ambiguous (VUCA)</span> environment and it’s important that we can overcome constant interference in order to succeed and ultimately be happy. When you strip everything away that kept us occupied and busy I think we realise what really matters and now more than ever, we need to feel connected to whatever our passions and purpose are.
@@ -61,7 +60,7 @@ background-position-x: left;'>
                             </a>
                         </li>
                     </ul>
-                    <div class="tab-content">
+                    <div class="tab-content" style="background: rgb(225 195 202 / 70%);">
                         <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
                             <div class="text-center">
                                 <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
@@ -84,7 +83,7 @@ background-position-x: left;'>
     </div>
     <div class="mt-4 pt-4 row">
         <div class="col col-xl-9 text-center">
-            <a class="btn btn-outline btn-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
+            <a class="btn btn-outline text-white btn-primary bg-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
         </div>
     </div>
     <br>
