--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -1,12 +1,12 @@
 <footer id="footer" class="bg-color-secondary mt-0">
     <div class="container my-4">
         <div class="row py-5">
-            <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+            <div class="col-6 col-lg-3 mb-5 mb-lg-0">
                 <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Contact Details</h5>
                 <p class="text-4 mb-0">Linkedin: <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" class="text-color-hover-primary">Jessica Ocquaye</a> </p>
                 <p class="text-4 mb-0">Email: <a href="mailto:info@jfmconsult.co.uk" class="text-color-primary">info@jfmconsult.co.uk</a></p>
             </div>
-            <div class="col-6 col-lg-2 mb-5 mb-lg-0">
+            <div class="col-6 col-lg-4 mb-5 mb-lg-0">
                 <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Pages</h5>
                 <ul class="list list-icons list-icons-sm">
                     <li><i class="fas fa-angle-right"></i><a href="/about/" class="link-hover-style-1 ml-1"> About Us</a></li>
@@ -15,16 +15,10 @@
                     <li><i class="fas fa-angle-right"></i><a href="/contact/" class="link-hover-style-1 ml-1"> Contact Us</a></li>
                 </ul>
             </div>
-            <div class="col-6 col-lg-2 mb-5 mb-lg-0">
-                <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Links</h5>
-                <ul class="list list-icons list-icons-sm">
-                    <li><i class="fas fa-angle-right"></i><a href="#" class="link-hover-style-1 ml-1"> Privacy Policy</a></li>
-                </ul>
-            </div>
             <div class="col-lg-5">
                 <h5 class="text-6 text-transform-none font-weight-semibold text-color-light mb-4">Newsletter</h5>
                 <p class="text-4 mb-1">Get all the latest informationon Sales and Offers.</p>
-                <p class="text-4">Sign up for newsletter today.</p>
+                <p class="text-4">Sign up for our newsletter today.</p>
                 <div class="alert alert-success d-none" id="newsletterSuccess">
                     <strong>Success!</strong> You've been added to our email list.
                 </div>
