--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -18,7 +18,7 @@
     </p>
     <br>
     <div class="container py-5">
-        <div class="row col-xl-9 justify-content-center mb-4">
+        <div class="col-xl-9 justify-content-center mb-4">
             <div>
 
                 <div class="tabs tabs-bottom tabs-center tabs-simple custom-tabs-style-1 mt-2 mb-3">
