--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -7,13 +7,13 @@
 {% include 'components/slider.html' %}
 
 
-<div class="container mb-5 mt-5 p-5" id="main">
-        <img class="m-auto" src="{% static 'img/logo-transparent.png' %}" alt="">
-    </div>
+<div class="container my-5 p-5" id="main">
+    <img class="m-auto img-fluid" src="{% static 'img/logo-transparent.png' %}" alt="">
+</div>
 <section class="section section-tertiary border-0 py-0 m-0 mt-5 z-index-master position-relative appear-animation"  data-appear-animation="fadeIn">
     <div class="container">
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
-            <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
+            <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation text-center" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
                 <h2 class="font-weight-bold text-color-primary text-7 mb-2">Who Am I?</h2>
                 <p class="lead text-secondary text-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
                 <p class="font-weight-light text-quaternary text-2 mb-4 opacity-9">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
