updates pre color - scheme

--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -15,6 +15,12 @@
                     <li><i class="fas fa-angle-right"></i><a href="/contact/" class="link-hover-style-1 ml-1"> Contact Us</a></li>
                 </ul>
             </div>
+            <!-- <div class="col-6 col-lg-2 mb-5 mb-lg-0">
+                <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Links</h5>
+                <ul class="list list-icons list-icons-sm">
+                    <li><i class="fas fa-angle-right"></i><a href="#" class="link-hover-style-1 ml-1"> Privacy Policy</a></li>
+                </ul>
+            </div> -->
             <div class="col-lg-5">
                 <h5 class="text-6 text-transform-none font-weight-semibold text-color-light mb-4">Newsletter</h5>
                 <p class="text-4 mb-1">Get all the latest informationon Sales and Offers.</p>
@@ -23,7 +29,7 @@
                     <strong>Success!</strong> You've been added to our email list.
                 </div>
                 <div class="alert alert-danger d-none" id="newsletterError"></div>
-                <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST" class="mw-100">
+                <form id="newsletterForm" action="#" method="POST" class="mw-100">
                     <div class="input-group input-group-rounded">
                         <input class="form-control form-control-sm px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
                         <span class="input-group-append">
