--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -67,7 +67,11 @@
 			{% include 'components/nav.html' %}
 
 			<div role="main" class="main bg-color-secondary">
+				{% if request.get_full_path == '/' %}
 				<div class="h-100">
+				{% else %}
+				<div class="h-100 bg-color-white">
+				{% endif %}
 					
 					{% block content %}
 					{% endblock %}
