--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -3,7 +3,7 @@
 {% block title %} Coaching {% endblock %} 
 {% block content %}
 
-<div class="text-center mt-5 mb-3">
+<div class="text-center pt-5 mb-3">
     <div class="overflow-hidden mb-1">
         <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;">The <strong class="font-weight-extra-bold">Coaching Process</strong> </h2>
     </div>
