--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -2,12 +2,12 @@
     <div class="container my-4">
         <div class="row py-5">
             <div class="col-6 col-lg-3 mb-5 mb-lg-0">
-                <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Contact Details</h5>
-                <p class="text-4 mb-0">Linkedin: <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" class="text-color-hover-primary">Jessica Ocquaye</a> </p>
-                <p class="text-4 mb-0">Email: <a href="mailto:info@jfmconsult.co.uk" class="text-color-primary">info@jfmconsult.co.uk</a></p>
+                <h5 class="text-5 text-transform-none font-weight-semibold text-quaternary mb-4">Contact Details</h5>
+                <p class="text-4 text-primary mb-0">Linkedin: <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" class="text-color-hover-quaternary">Jessica Ocquaye</a> </p>
+                <p class="text-4 text-primary mb-0">Email: <a href="mailto:info@jfmconsult.co.uk" class="text-color-hover-quaternary">info@jfmconsult.co.uk</a></p>
             </div>
             <div class="col-6 col-lg-4 mb-5 mb-lg-0">
-                <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Pages</h5>
+                <h5 class="text-5 text-transform-none font-weight-semibold text-quaternary mb-4">Pages</h5>
                 <ul class="list list-icons list-icons-sm">
                     <li><i class="fas fa-angle-right"></i><a href="/about/" class="link-hover-style-1 ml-1"> About Us</a></li>
                     <li><i class="fas fa-angle-right"></i><a href="/coaching/" class="link-hover-style-1 ml-1"> Coaching</a></li>
@@ -22,7 +22,7 @@
                 </ul>
             </div> -->
             <div class="col-lg-5">
-                <h5 class="text-6 text-transform-none font-weight-semibold text-color-light mb-4">Newsletter</h5>
+                <h5 class="text-6 text-transform-none font-weight-semibold text-quaternary mb-4">Newsletter</h5>
                 <p class="text-4 mb-1">Get all the latest informationon Sales and Offers.</p>
                 <p class="text-4">Sign up for our newsletter today.</p>
                 <div class="alert alert-success d-none" id="newsletterSuccess">
@@ -48,14 +48,14 @@
                     <script>
                         document.write(new Date().getFullYear())
                     </script> JFM Consult | Website by 
-                    <a class="text-color-hover-primary" href="https://www.github.com/AX99/" target="blank">AX99</a>
+                    <a class="text-color-hover-quaternary" href="https://www.github.com/AX99/" target="blank">AX99</a>
                 </div>
                 <div class="col">
                     <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-opacity-light social-icons-icon-light mt-1">
                         <!-- change classes below to icon name and change references -->
-                        <li><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.tiktok.com/@jessfmcoach" target="_blank" title="Tiktok"><i class="fab fa-tiktok"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="mailto:info@jfmconsult.co.uk" target='mailto'><i class="far fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
