--- a/landing/templates/components/nav.html
+++ b/landing/templates/components/nav.html
@@ -58,7 +58,7 @@
             </div>
             <div class="header-nav-features header-nav-features-no-border header-nav-features-lg-show-border order-1 order-lg-2">
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in text-color-primary text-hover-light header-nav-top-icon"></i></a>
+                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in text-color-primary text-hover-light header-nav-top-icon"></i></a>
               </div>
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
                 <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2" target='mailto'><i class="far fa-envelope text-color-primary text-hover-light header-nav-top-icon"></i></a>
