--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -7,20 +7,20 @@
 {% include 'components/slider.html' %}
 
 
-<div class="container my-5 p-5" id="main">
+<!-- <div class="container my-5 p-5" id="main">
     <img class="m-auto img-fluid" src="{% static 'img/logo-transparent.png' %}" alt="">
-</div>
-<section class="section section-tertiary border-0 py-0 m-0 mt-5 z-index-master position-relative appear-animation"  data-appear-animation="fadeIn">
+</div> -->
+<section class="section section-tertiary border-0 m-0 pt-5 z-index-master position-relative appear-animation"  data-appear-animation="fadeIn" id="main">
     <div class="container">
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
             <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation text-center" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                <h2 class="font-weight-bold text-color-primary text-7 mb-2">Who Am I?</h2>
-                <p class="lead text-secondary text-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
-                <p class="font-weight-light text-quaternary text-2 mb-4 opacity-9">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
-                <a href="/about/" class="btn btn-dark-scale-2 text-color-hover-secondary bg-color-hover-primary btn-px-5 btn-py-2 text-2">LEARN MORE</a>
+                <h2 class="font-weight-bold text-color-secondary text-7 mb-2">Who Am I?</h2>
+                <p class="lead text-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
+                <p class="font-weight-light text-primary text-2 mb-4 opacity-9">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
+                <a href="/about/" class="btn bg-primary text-white text-color-hover-secondary bg-color-hover-quaternary btn-px-5 btn-py-2 text-2">LEARN MORE</a>
             </div>
-            <div class="col-9 offset-lg-1 col-lg-5 order-1 order-lg-2 scale-2">
-                <img class="img-fluid box-shadow-3 my-2 border-radius" src="{% static "img/team/Jess.jpg"%}" alt="">
+            <div class="col-9 offset-lg-1 col-lg-5 order-1 order-lg-2">
+                <img class="img-fluid box-shadow-3 my-2 border-radius" src="{% static "img/team/jessica.jpg"%}" alt="">
             </div>
         </div>
     </div>
@@ -37,8 +37,8 @@
                         <strong class="process-step-circle-content">1</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">Getting Started</h4>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum ma Nullam id varius nunc. </p>
+                        <h4 class="mb-1 text-4 font-weight-bold">What is Coaching?</h4>
+                        <p class="mb-0">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. </p>
                     </div>
                 </div>
                 <div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -46,8 +46,8 @@
                         <strong class="process-step-circle-content">2</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">Learn About Us</h4>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit masbendum ma Nullam id varius nunc. Vivamus bibendum magna ex, et faucibus lacus venenatis eget</p>
+                        <h4 class="mb-1 text-4 font-weight-bold">What will you get from me as a coach?</h4>
+                        <p class="mb-0">A critical friend who can listen, encourage and challenge you. I will give you the opportunity to work through different possibilities using a range of tools.</p>
                     </div>
                 </div>
                 <div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
@@ -55,8 +55,8 @@
                         <strong class="process-step-circle-content">3</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">View Our Projects</h4>
-                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bib</p>
+                        <h4 class="mb-1 text-4 font-weight-bold">Next steps...</h4>
+                        <p class="mb-0">If you are interested in learning more and taking on some coaching, book a free initial chemistry session and see whether my approach is right for you before making a commitment. </p>
                     </div>
                 </div>
             </div>
@@ -72,58 +72,5 @@
     </div>
 </div>
 
-<!-- 
-<div class="container py-5 my-5" id="main">
-    <div class="row justify-content-center text-center mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
-        <div class="col-lg-8">
-            <h2 class="font-weight-bold text-tertiary mb-3 mt-3">We Can Help You</h2>
-            <p class="text-6 text-color-primary line-height-7 negative-ls-1 px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit phasellus blandit massa enim.</p>
-            <p class="opacity-9 text-4 text-tertiary">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamos bibendum magna ex.</p>
-        </div>
-    </div>
-    <div class="row featured-boxes featured-boxes-style-4">
-        <div class="col-md-6 col-lg-3">
-            <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
-                <div class="box-content px-4">
-                    <i class="icon-featured text-tertiary icon-screen-tablet icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Mobile Apps</h4>
-                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeIn">
-                <div class="box-content px-4">
-                    <i class="icon-featured text-tertiary icon-layers icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Creative Websites</h4>
-                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeIn">
-                <div class="box-content px-4">
-                    <i class="icon-featured text-tertiary icon-magnifier icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">SEO Optimization</h4>
-                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                <div class="box-content px-4">
-                    <i class="icon-featured text-tertiary icon-screen-desktop icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Brand Solutions</h4>
-                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-{% include 'components/testimonials.html' %}
-
-
-
-
+<!-- {% include 'components/testimonials.html' %} -->
 {% endblock %}
