--- a/landing/templates/blog.html
+++ b/landing/templates/blog.html
@@ -5,7 +5,7 @@
 
 <div role="main" class="main">
     <div class="container">
-        <div class="row mt-5">
+        <div class="row pt-5">
             <div class="col text-center">
                 <div class="logo">
                     <a href="/">
