--- a/landing/templates/components/slider.html
+++ b/landing/templates/components/slider.html
@@ -33,7 +33,7 @@
                     data-transform_idle="opacity:0.2;s:500;"><img src="{% static "img/slides/slide-title-border.png" %}" alt=""></div> -->
 
 
-                <!-- <div class="tp-caption tp-resizeme"
+                <div class="tp-caption tp-resizeme"
                     data-x="center"
                     data-y="center" 
                     data-voffset="['-30','-30','-30','-105']"
@@ -43,10 +43,10 @@
                     data-start="1000"
                     data-transform_in="opacity:0;s:500;"
                     data-transform_idle="opacity:1;s:500;" style="z-index: 5;"><img class="slider-logo" src="{% static 'img/logo-transparent.png' %}" alt="">
-                </div> -->
+                </div>
 
 
-                <h1 class="tp-caption font-weight-extra-bold text-color-light negative-ls-2"
+                <!-- <h1 class="tp-caption font-weight-extra-bold text-color-light negative-ls-2"
                     data-frames='[{"delay":500,"speed":2000,"frame":"0","from":"sX:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-x="center"
                     data-y="center" 
@@ -62,10 +62,10 @@
                     data-y="center" data-voffset="['0','0','0','-25']"
                     data-fontsize="['18','18','18','30']"
                     data-lineheight="['29','29','29','40']"
-                    style="color: #b5b5b5;">Uniting <strong class="text-color-light">Passion</strong> with <strong class="text-color-light">Purpose</strong></div>
+                    style="color: #b5b5b5;">Uniting <strong class="text-color-light">Passion</strong> with <strong class="text-color-light">Purpose</strong></div> -->
 
                 <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold"
-                    data-frames='[{"delay":2500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
+                    data-frames='[{"delay":1500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-hash
                     data-hash-offset="85"
                     href="#main"
