--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -5,27 +5,27 @@
 
 
 <div role="main" class="main">
-    <div class="text-center mt-5 mb-3">
+    <div class="text-center pt-5 mb-3">
         <div class="overflow-hidden mb-1">
             <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;"><strong class="font-weight-extra-bold ">Contact</strong> Us</h2>
         </div>
         <div class="overflow-hidden mb-4 pb-3">
-            <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
+            <p class="text-secondary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
         </div>
     </div>
     <hr>
     <div class="container mt-3">
         <div class="row py-4">
             <div class="col-lg-6">
-                <h4 class="text-tertiary">Get in <strong>Touch</strong></h4>
-                <p class="text-quaternary lead mb-0 text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4 class="text-primary">Get in <strong>Touch</strong></h4>
+                <p class="text-secondary font-weight-semibold lead mb-0 text-4">If you are interested in learning more and taking on some coaching please get in touch with me to book a free initial chemistry session. Or if you have any questions, fill out the form with your details and I'll get back to you to schedule a meeting.</p>
 
                 <div class="appear-animation animated fadeIn appear-animation-visible pt-5" data-appear-animation="fadeIn" data-appear-animation-delay="800" style="animation-delay: 800ms;">
-                    <h4 class="text-tertiary mt-2 mb-1">Other <strong>Contacts</strong></h4>
+                    <h4 class="text-primary mt-2 mb-1">Other <strong>Contacts</strong></h4>
                     <ul class="list list-icons list-icons-style-2 mt-2">
-                        <li><i class="fab fa-linkedin-in"></i> <strong class="text-tertiary">LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank">Jessica Ocquaye MCIPD</a></li>
-                        <li><i class="fas fa-phone top-6"></i> <strong class="text-tertiary">Phone: </strong><a href="tel:123456789" target='tel'>(123) 456-789</a></li>
-                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-tertiary">Email:</strong> <a href="mailto:info@jfmconsult.com" target="mailto">info@jfmconsult.com</a></li>
+                        <li><i class="fab fa-linkedin-in"></i> <strong class="text-quaternary">LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/" target="_blank">Jessica Ocquaye MCIPD</a></li>
+                        <li><i class="fab fa-tiktok top-6"></i> <strong class="text-quaternary">TikTok: </strong><a href="https://www.tiktok.com/@jessfmcoach" target='_blank'>@JessFMCoach</a></li>
+                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-quaternary">Email:</strong> <a href="mailto:info@jfmconsult.com" target="mailto">info@jfmconsult.com</a></li>
                     </ul>
                 </div>
                 
@@ -115,28 +115,30 @@
                     <div class="form-row">
                        {% for field in form.visible_fields|slice:"0:2" %}
                         <div class="form-group col">
-                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label}}</label>
+                            <label class="required font-weight-bold text-primary text-2">{{ field.label}}</label>
+                            {{field.errors}}
                             <input type="text" value="" data-msg-required="Please enter your {{ field.label }}." class="bg-color-grey-scale-10 form-control" name="{{field.name}}" id="{{ field.name }}">
                         </div>
-                        {{field.errors}}
                         {% endfor %}
                     </div>
                     <div class="form-row">
                         {% for field in form.visible_fields|slice:"2:4" %}
                         <div class="form-group col-lg-6">
-                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label }}</label>
+                            <label class="required font-weight-bold text-primary text-2">{{ field.label }}</label>
+                            {{field.errors}}
                             <input type="{{ field.name }}" data-msg-required="Please enter your {{field.label}}." data-msg-email="Please enter a valid {{field.label}}." class="bg-color-grey-scale-10 form-control" name="{{ field.name }}" id="{{ field.name }}">
                         </div>
-                        {{field.errors}}
+                        
                         {% endfor %}
                     </div>
                     <div class="form-row">
                         {% for field in form.visible_fields|slice:"4:" %}
                         <div class="form-group col">
-                            <label class="required font-weight-bold text-tertiary text-2">{{ field.label }}</label>
+                            <label class="required font-weight-bold text-primary text-2">{{ field.label }}</label>
+                            {{field.errors}}
                             <textarea data-msg-required="Please enter your {{ field.label }}." rows="5" class="bg-color-grey-scale-10 form-control" name="{{ field.name }}" id="{{ field.name }}"></textarea>
                         </div>
-                        {{field.errors}}
+                        
                         {% endfor %}
                     </div>
                     <div class="form-row">
