--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -8,7 +8,7 @@
         <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;">The <strong class="font-weight-extra-bold">Coaching Process</strong> </h2>
     </div>
     <div class="overflow-hidden mb-4 pb-3">
-        <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
+        <p class="text-secondary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
 <div class="container-fluid" id="coaching-body">
@@ -32,7 +32,7 @@
                                         </span>
                                     </span>
                                 </span>									
-                                <p class="text-color-hover-tertiary  font-weight-bold mb-0 pt-2 text-2 pb-0">1. Strategy</p>
+                                <p class="text-color-hover-secondary  font-weight-bold mb-0 pt-2 text-2 pb-0">1. What is Coaching</p>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -44,7 +44,7 @@
                                         </span>
                                     </span>
                                 </span>									
-                                <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">2. Creative</p>
+                                <p class="text-color-hover-secondary font-weight-bold mb-0 pt-2 text-2 pb-0">2. What will you get from me as a coach?</p>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -56,24 +56,33 @@
                                         </span>
                                     </span>
                                 </span>									
-                                <p class="text-color-hover-tertiary font-weight-bold mb-0 pt-2 text-2 pb-0">3. Development</p>
+                                <p class="text-color-hover-secondary font-weight-bold mb-0 pt-2 text-2 pb-0">3. What are the benefits of Coaching?</p>
                             </a>
                         </li>
                     </ul>
                     <div class="tab-content" style="background: rgb(225 195 202 / 70%);">
                         <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
                             <div class="text-center">
-                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                                <p class="text-secondary">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons2">
                             <div class="text-center">
-                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                                <p class="text-secondary">A critical friend who can listen, encourage and challenge you. I believe that everyone has the potential to grow and be successful in every area of their lives. I will give you the opportunity to work through different possibilities using a range of tools in a non-judgemental and open environment. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons3">
                             <div class="text-center">
-                                <p class="text-tertiary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+                                <p class="text-secondary">Coaching can be applied to any part of your life and cover a range of topics spanning your personal and professional life. Some of the benefits include the following
+                                    <ul>
+                                        <li>Increased Self-confidence</li>
+                                        <li>Improved job performance and satisfaction </li>
+                                        <li>Promotion</li>
+                                        <li>Assertiveness</li>
+                                        <li>Career change</li>
+                                        <li>Better work/life balance</li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
