--- a/landing/templates/components/testimonials.html
+++ b/landing/templates/components/testimonials.html
@@ -1,6 +1,6 @@
 
 
-<section class="section section-primary my-0 border-0 p-3 appear-animation" data-appear-animation="fadeIn">
+<section class="section section-primary my-0 border-0 appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row">
             <div class="col appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
