--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -103,7 +103,7 @@ html .btn-primary:hover, html .btn-primary.hover {
   }
 
 .nav-tabs .nav-item:hover p {
-    color: #E3D9CB
+    color: #101324;
 }
 
 /* Coaching page section  */
